OZARK-83: Fix PMD Errors